fixed spacing issues finally, fixed perform space

--- a/src/components/layout/layoutGrid.css
+++ b/src/components/layout/layoutGrid.css
@@ -11,6 +11,6 @@
     grid-row-end: footer;
     display: grid;
     grid-template-columns: [left-gutter] 1fr [left] 3fr [left-center] 3fr [center]  3fr [right-center] 3fr [right] 3fr [right-gutter] 1fr;
-    grid-gap: 30px;
+    grid-gap: 0px;
 
 }
